# Aurelius-Medical-Imaging-Platform

./: .env.example  CANCER_AI_MODULE_DOCUMENTATION.md  COMPLETE_PROJECT_STATUS_REPORT.md  COMPREHENSIVE_STATUS_REPORT.md  DEPLOYMENT.md  INTEGRATED_ARCHITECTURE.md  INTEGRATION_SUMMARY.md  MED_AGI_INTEGRATION_STATUS.md  MERGE_INSTRUCTIONS.md  PROMETHEUS_AGENT_CLINICAL_TOOLS_UPDATE.md  PROMETHEUS_EXPANSION_DOCUMENTATION.md  PROMETHEUS_MODULE_DOCUMENTATION.md  README.md  UNIFIED_FRONTEND_IMPLEMENTATION.md  docker-compose.yml  prepare_dataset.py  start.sh
Aurelius Advanced Medical Imaging Platform/: .env.example  .gitignore  API_CONTRACTS.md  ARCHITECTURE.md  Chart.yaml  DATA_MODEL.md  Dockerfile  FILE_MANIFEST.md  FRONTEND_COMPLETE.md  GETTING_STARTED.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.txt  KUBERNETES_QUICK_REFERENCE.md  Makefile  NOTES.txt  PORT_CHANGES.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY.md  SESSION_12_COMPLETE.md  SESSION_13_COMPLETE.md  SESSION_14_COMPLETE.md  SESSION_15_COMPLETE.md  SESSION_LOG.md  TenantAdminDashboard.tsx  _helpers.tpl  api-performance.json  billing_service.py  compose.yaml  compose.yaml.legacy  configmap.yaml  deploy.sh  gateway-deployment.yaml  gateway-hpa.yaml  gateway-service.yaml  gpu-costs.json  grafana-datasources.yml  ingress.yaml  (+28 more)
Aurelius Advanced Medical Imaging Platform/apps/frontend/: .env.local.example  Dockerfile  README.md  next.config.js  package.json  tailwind.config.js
Aurelius Advanced Medical Imaging Platform/apps/gateway/: Dockerfile
Aurelius Advanced Medical Imaging Platform/apps/gateway/app/: __init__.py  main.py
Aurelius Advanced Medical Imaging Platform/apps/imaging-svc/: Dockerfile
Aurelius Advanced Medical Imaging Platform/apps/imaging-svc/app/: __init__.py  main.py
Aurelius Advanced Medical Imaging Platform/apps/ml-svc/: Dockerfile  requirements.txt
Aurelius Advanced Medical Imaging Platform/apps/ml-svc/app/: __init__.py  main.py
Aurelius Advanced Medical Imaging Platform/apps/search-svc/: Dockerfile
Aurelius Advanced Medical Imaging Platform/apps/search-svc/app/: __init__.py  main.py
Aurelius Advanced Medical Imaging Platform/infra/postgres/: 001_initial_schema.sql  014_add_multitenancy.py
advanced-cancer-ai/: .gitignore  Dockerfile.backend  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  docker-compose.yml  requirements.txt  train.py
advanced-cancer-ai/frontend/: .env.example  .gitignore  index.html  package.json  vite.config.js
advanced-cancer-ai/frontend/src/: App.jsx  index.css
advanced-cancer-ai/frontend/src/pages/: Analytics.jsx  History.jsx  NewPrediction.jsx
advanced-cancer-ai/frontend/src/store/: useStore.js
advanced-cancer-ai/src/data/: augmentation.py  datasets.py
advanced-cancer-ai/src/deployment/: inference_server.py
advanced-cancer-ai/src/evaluation/: __init__.py
advanced-cancer-ai/src/models/: multimodal_cancer_detector.py
advanced-cancer-ai/src/utils/: __init__.py  config.py  logger.py  visualization.py
cancer_quant_model/: .gitignore  BRAIN_CANCER_TRAINING.md  COMPLETION_REPORT.md  DATASET_SETUP_INSTRUCTIONS.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt
cancer_quant_model/config/: dataset.yaml  eval_default.yaml  model_efficientnet.yaml  model_resnet.yaml  model_vit.yaml  train_default.yaml
cancer_quant_model/docs/: dataset_notes.md  experiments_guide.md  model_card.md
cancer_quant_model/notebooks/: EDA_dataset_overview.ipynb  EDA_features_viz.ipynb
cancer_quant_model/scripts/: create_splits.py  evaluate.py  extract_quant_features.py  generate_synthetic_data.py  infer_single_image.py  prepare_data.py  setup_dataset.py  train.py
cancer_quant_model/src/cancer_quant_model/: __init__.py  config.py
cancer_quant_model/src/cancer_quant_model/api/: __init__.py  batch_inference.py  inference_api.py
cancer_quant_model/src/cancer_quant_model/data/: __init__.py  datamodule.py  dataset.py  transforms.py
cancer_quant_model/src/cancer_quant_model/explainability/: __init__.py  grad_cam.py
cancer_quant_model/src/cancer_quant_model/models/: __init__.py  efficientnet.py  heads.py  resnet.py  vit.py
cancer_quant_model/src/cancer_quant_model/training/: __init__.py  callbacks.py  eval_loop.py  train_loop.py
cancer_quant_model/src/cancer_quant_model/utils/: __init__.py  feature_utils.py  logging_utils.py  metrics_utils.py  seed_utils.py  tiling_utils.py  viz_utils.py
cancer_quant_model/tests/: __init__.py  test_dataset.py  test_feature_extraction.py  test_models.py  test_train_loop.py
configs/: default_config.yaml
frontend/: README.md  nginx.conf  tailwind.config.js
frontend/src/components/: Layout.jsx  PredictionResults.jsx
frontend/src/pages/: BatchProcessing.jsx  Dashboard.jsx  Settings.jsx
frontend/src/services/: api.js
orthanc-scripts/: cancer_ai_hook.lua
src/data/: __init__.py  data_manager.py  loaders.py  preprocessing.py
src/evaluation/: metrics.py
(+92 files in other folders)
