[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cancer-quant-model"
version = "0.1.0"
description = "Production-ready quantitative cancer histopathology modeling pipeline"
authors = [
    {name = "Aurelius Medical Imaging Platform"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "albumentations>=1.3.0",
    "mlflow>=2.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "timm>=0.9.0",
    "grad-cam>=1.4.0",
    "tensorboard>=2.14.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "rich>=13.5.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "ipython>=8.14.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "nbformat>=5.9.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "plotly>=5.16.0",
    "ipywidgets>=8.1.0",
]

[project.scripts]
cancer-train = "cancer_quant_model.scripts.train:main"
cancer-eval = "cancer_quant_model.scripts.evaluate:main"
cancer-infer = "cancer_quant_model.scripts.infer_single_image:main"

[tool.setuptools]
packages = ["cancer_quant_model"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=cancer_quant_model --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
